Added mqtt bridge

--- a/variants/heltec_v3/platformio.ini
+++ b/variants/heltec_v3/platformio.ini
@@ -102,6 +102,44 @@ lib_deps =
   ${Heltec_lora32_v3.lib_deps}
   ${esp32_ota.lib_deps}
 
+[env:Heltec_v3_repeater_bridge_mqtt]
+extends = Heltec_lora32_v3
+build_flags =
+  ${Heltec_lora32_v3.build_flags}
+  -D DISPLAY_CLASS=SSD1306Display
+  -D ADVERT_NAME='"MQTT Bridge (Test)"'
+  -D ADVERT_LAT=0.0
+  -D ADVERT_LON=0.0
+  -D ADMIN_PASSWORD='"password"'
+  -D MAX_NEIGHBOURS=50
+  ; LoRa radio parameters
+  -D LORA_FREQ=868.9
+  -D LORA_BW=62.5
+  -D LORA_SF=10
+  -D LORA_CR=5
+  -D LORA_SYNC=0x12
+  ; MQTT Bridge configuration
+  -D WITH_MQTT_BRIDGE=1
+  -D WITH_MQTT_BROKER='"ha.calm.land"'
+  -D WITH_MQTT_PORT=1883
+  -D WITH_MQTT_TOPIC='"mshcore/namore"'
+  -D WITH_MQTT_USER='"vityevato"'
+  -D WITH_MQTT_PASSWORD='"Vjktrekf2025"'
+  ; WiFi configuration
+  -D WITH_WIFI_SSID='"Calm"'
+  -D WITH_WIFI_PASSWORD='"JutunVjhrjdrf"'
+  ; Debug options
+  -D MESH_PACKET_LOGGING=1
+;  -D MESH_DEBUG=1
+build_src_filter = ${Heltec_lora32_v3.build_src_filter}
+  +<helpers/bridges/MQTTBridge.cpp>
+  +<helpers/ui/SSD1306Display.cpp>
+  +<../examples/simple_repeater>
+lib_deps =
+  ${Heltec_lora32_v3.lib_deps}
+  ${esp32_ota.lib_deps}
+  knolleary/PubSubClient @ ^2.8
+
 [env:Heltec_v3_room_server]
 extends = Heltec_lora32_v3
 build_flags =
