Added check for mqtt topics

--- a/variants/heltec_v3/platformio.ini
+++ b/variants/heltec_v3/platformio.ini
@@ -107,7 +107,7 @@ extends = Heltec_lora32_v3
 build_flags =
   ${Heltec_lora32_v3.build_flags}
   -D DISPLAY_CLASS=SSD1306Display
-  -D ADVERT_NAME='"MQTT Bridge 2 (Test)"'
+;  -D ADVERT_NAME='"MQTT Bridge"'
   -D ADVERT_LAT=0.0
   -D ADVERT_LON=0.0
   -D ADMIN_PASSWORD='"password"'
@@ -117,8 +117,8 @@ build_flags =
   -D WITH_MQTT_TLS=1
   -D WITH_MQTT_CA_CERT=MQTT_CA_CERT
   ; Debug options
-  -D MESH_PACKET_LOGGING=1
-  -D BRIDGE_DEBUG=1
+;  -D MESH_PACKET_LOGGING=1
+;  -D BRIDGE_DEBUG=1
 ;  -D MESH_DEBUG=1
 build_src_filter = ${Heltec_lora32_v3.build_src_filter}
   +<helpers/bridges/MQTTBridge.cpp>
