--- a/variants/heltec_v3/platformio.ini
+++ b/variants/heltec_v3/platformio.ini
@@ -116,9 +116,13 @@ build_flags =
   -D WITH_MQTT_BRIDGE=1
   -D WITH_MQTT_TLS=1
   -D WITH_MQTT_CA_CERT=MQTT_CA_CERT
+  ; CPU frequency override for TLS (mbedTLS requires more performance)
+  -D ESP32_CPU_FREQ=160
+  ; Increase stack size for TLS operations (mbedTLS requires ~11-15 KB, 24 KB for safety margin)
+  -D CONFIG_ARDUINO_LOOP_STACK_SIZE=24576
   ; Debug options
-;  -D MESH_PACKET_LOGGING=1
-;  -D BRIDGE_DEBUG=1
+  -D MESH_PACKET_LOGGING=1
+  -D BRIDGE_DEBUG=1
 ;  -D MESH_DEBUG=1
 build_src_filter = ${Heltec_lora32_v3.build_src_filter}
   +<helpers/bridges/MQTTBridge.cpp>
